# Crewai-projects

crewai-projects/customer_support/: README.md  ollama_check.py  output.txt  pyproject.toml
crewai-projects/customer_support/src/customer_support/: crew.py  main.py
crewai-projects/customer_support/src/customer_support/config/: agents.yaml
crewai-projects/event_planning/: README.md  marketing_report.md  output.txt  pyproject.toml  venue_details.json
crewai-projects/event_planning/src/event_planning/: crew.py  main.py
crewai-projects/event_planning/src/event_planning/config/: agents.yaml  tasks.yaml
crewai-projects/event_planning/src/event_planning/validators/: model_validators.py
crewai-projects/financial_analysis/: README.md  output.txt  pyproject.toml
crewai-projects/financial_analysis/src/financial_analysis/: crew.py  main.py
crewai-projects/financial_analysis/src/financial_analysis/config/: agents.yaml  tasks.yaml
crewai-projects/help_me_in_finding_job/: README.md  pyproject.toml  scraper.py  tailored_resume.md
crewai-projects/help_me_in_finding_job/db/: chroma.sqlite3
crewai-projects/help_me_in_finding_job/src/help_me_in_finding_job/: crew.py  main.py
crewai-projects/help_me_in_finding_job/src/help_me_in_finding_job/config/: agents.yaml  tasks.yaml
crewai-projects/help_me_in_finding_job/src/help_me_in_finding_job/tools/: custom_tool.py
customer_support/: report.md
customer_support/src/customer_support/config/: tasks.yaml
